--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <h3 class="menuItem">BLAZER</h3>
             <h3 class="menuItem">CRATER</h3>
             <h3 class="menuItem">HIPPIE</h3>
-            <h3 class="menuItem"><a href="my_project/templates/register.html" class="register-link">Kayıt Ol </a></h3>
+            <h3 class="menuItem">
+                <a href="{{ url_for('register') }}" class="register-link">Kayıt Ol</a>
+              </h3>              
     </nav>
     <div class="slider" >
         <div class="sliderWrapper">
