--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3 class="menuItem">CRATER</h3>
             <h3 class="menuItem">HIPPIE</h3>
             <h3 class="menuItem">
-                <a href="{{ url_for('register') }}" class="register-link">Kayıt Ol</a>
+                <a href="{{ url_for('register.html') }}" class="register-link">Kayıt Ol</a>
               </h3>              
     </nav>
     <div class="slider" >
