--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <h3 class="menuItem">CRATER</h3>
             <h3 class="menuItem">HIPPIE</h3>
             <h3 class="menuItem">
-                <a href="{{ url_for('register.html') }}" class="register-link">Kayıt Ol</a>
-              </h3>              
+            <h3 class="menuItem"><a href="my_flask_app/templates/register.html" class="register-link">Kayıt Ol </a></h3> s              
     </nav>
     <div class="slider" >
         <div class="sliderWrapper">
